syntax = "proto3";

package stobo.cart;

import "google/protobuf/timestamp.proto";
import "types/item.proto";

option java_multiple_files = true;
option java_outer_classname = "CartProto";
option java_package = "com.stobo.proto.cart";

service CartService {
  rpc GetCartEntries(GetCartEntriesRequest) returns (GetCartEntriesResponse) {}
  rpc ClearCartEntries(ClearCartEntriesRequest) returns (ClearCartEntriesResponse) {}
  rpc AddCartEntry(AddCartEntryRequest) returns (AddCartEntryResponse) {}
  rpc DeleteCartEntry(DeleteCartEntryRequest) returns (DeleteCartEntryResponse) {}
  rpc ClearCartEntry(ClearCartEntryRequest) returns (ClearCartEntryResponse) {}
}

message Entry {
  optional stobo.types.Item item = 1;
  optional google.protobuf.Timestamp added_at = 2;
}

message Change {
  optional string user_id = 1;
  optional stobo.types.Item item = 2;
}

message GetCartEntriesRequest { optional string user_id = 1; }
message GetCartEntriesResponse { repeated Entry entries = 1; }

message ClearCartEntriesRequest { optional string user_id = 1; }
message ClearCartEntriesResponse { repeated Entry entries = 1; }

message AddCartEntryRequest { optional Change change = 1; }
message AddCartEntryResponse { repeated Entry entries = 1; }

message DeleteCartEntryRequest { optional Change change = 1; }
message DeleteCartEntryResponse { repeated Entry entries = 1; }

message ClearCartEntryRequest { optional Change change = 1; }
message ClearCartEntryResponse { repeated Entry entries = 1; }
